objects/ASI_KOR_Wholesaler_AR_Collateral_Detail__c.object
<CustomObject>
    <description>This custom object represents the Wholesaler AR Collateral Detail information for Pernod Ricard Korea</description>
    <fields>
        <fullName>ASI_KOR_Customer_Name__c</fullName>
        <formula>ASI_KOR_WS_AR_Coll_Link_To_WS__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Customer_Number__c</fullName>
        <formula>ASI_KOR_WS_AR_Coll_Link_To_WS__r.ASI_KOR_Customer_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_SYS_AR_Collateral_KEY__c</fullName>
        <externalId>true</externalId>
        <label>SYS_AR_Collateral_KEY</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_KOR_WS_AR_Coll_DET_Actual_Amt__c</fullName>
        <label>Actual Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_WS_AR_Coll_DET_Amount_Insured__c</fullName>
        <label>Amount Insured</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_WS_AR_Coll_DET_Applying_Rate__c</fullName>
        <label>Applying Rate (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_WS_AR_Coll_DET_Appraisal_Agency__c</fullName>
        <label>Appraisal Agency</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_WS_AR_Coll_DET_Appraisal_Amount__c</fullName>
        <label>Appraisal Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_WS_AR_Coll_DET_Branch__c</fullName>
        <label>Branch</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_WS_AR_Coll_DET_Building_Size__c</fullName>
        <label>Building Size</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_WS_AR_Coll_DET_Coll_Provider__c</fullName>
        <label>Collateral Provider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_WS_AR_Coll_DET_Collateral_Num__c</fullName>
        <label>Collateral Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_WS_AR_Coll_DET_Company__c</fullName>
        <label>Company</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_WS_AR_Coll_DET_Currency_Code__c</fullName>
        <label>Currency Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_WS_AR_Coll_DET_Customer_Name__c</fullName>
        <label>Customer Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_WS_AR_Coll_DET_Customer_Number__c</fullName>
        <label>Customer Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_WS_AR_Coll_DET_Debtor__c</fullName>
        <label>Debtor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_WS_AR_Coll_DET_Est_Amt_Lim__c</fullName>
        <label>Established Amount Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_WS_AR_Coll_DET_Established_Amt__c</fullName>
        <label>Established Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_WS_AR_Coll_DET_Exclus_Actual_Amt__c</fullName>
        <label>Exclusive Actual Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_WS_AR_Coll_DET_Exclus_Est_Amt__c</fullName>
        <label>Exclusive Established Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_WS_AR_Coll_DET_Extended_Valid_To__c</fullName>
        <label>Extended Valid To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_WS_AR_Coll_DET_Face_Value__c</fullName>
        <label>Face Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_WS_AR_Coll_DET_Flag_Termination__c</fullName>
        <label>Flag Termination</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_WS_AR_Coll_DET_Flag_to_Extension__c</fullName>
        <label>Flag to Extension</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_WS_AR_Coll_DET_Insurance_Company__c</fullName>
        <label>Insurance Company</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_WS_AR_Coll_DET_Insurance_Number__c</fullName>
        <label>Insurance Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_WS_AR_Coll_DET_Interest_Rate__c</fullName>
        <label>Interest Rate (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_WS_AR_Coll_DET_Issued_Date__c</fullName>
        <label>Issued Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_WS_AR_Coll_DET_Land_Size__c</fullName>
        <label>Land Size</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_WS_AR_Coll_DET_Lease_Deposit__c</fullName>
        <label>Lease Deposit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_WS_AR_Coll_DET_Location__c</fullName>
        <label>Location</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_WS_AR_Coll_DET_Mature_Amt_B4_Tax__c</fullName>
        <label>Mature Amount Before Tax</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_WS_AR_Coll_DET_Maturity_Date__c</fullName>
        <label>Maturity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_WS_AR_Coll_DET_Num_of_Rental__c</fullName>
        <label>Number of Rental</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_WS_AR_Coll_DET_Owner__c</fullName>
        <label>Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_WS_AR_Coll_DET_Priority__c</fullName>
        <label>Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_WS_AR_Coll_DET_Purchase_Price__c</fullName>
        <label>Purchase Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_WS_AR_Coll_DET_Security_Number__c</fullName>
        <label>Security Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_WS_AR_Coll_DET_Small_Amt_Deposit__c</fullName>
        <label>Small Amount Deposit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_WS_AR_Coll_DET_Split_Creditor__c</fullName>
        <label>Split Creditor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_WS_AR_Coll_DET_Sub_Date_of_Coll__c</fullName>
        <label>Sub. Date of Collateral</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_WS_AR_Coll_DET_Surface_Right__c</fullName>
        <label>Surface Right</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_WS_AR_Coll_DET_Term_Reason__c</fullName>
        <label>Termination Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_WS_AR_Coll_DET_Termination_Date__c</fullName>
        <label>Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_WS_AR_Coll_DET_Total_Creditor__c</fullName>
        <label>Total Creditor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_WS_AR_Coll_DET_Total_Deduction__c</fullName>
        <label>Total Deduction</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_WS_AR_Coll_DET_Valid_From__c</fullName>
        <label>Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_WS_AR_Coll_DET_Valid_To__c</fullName>
        <label>Valid To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_WS_AR_Coll_Link_To_WS__c</fullName>
        <label>Wholesaler</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Wholesaler_AR_Collateral_Detail</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>AR Collateral Info</label>
    <nameField>
        <displayFormat>COD-{00000000}</displayFormat>
        <label>Wholesaler AR Collateral Detail</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AR Collateral Info</pluralLabel>
    <recordTypes>
        <fullName>ASI_KOR_WS_AR_Collateral_Detail_Insurance</fullName>
        <active>true</active>
        <description>This Accounts Receivable record type represents the Insurance type of collateral</description>
        <label>Wholesaler AR Collateral Detail - Insurance</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_KOR_WS_AR_Collateral_Detail_Real_Estate</fullName>
        <active>true</active>
        <description>This Accounts Receivable record type represents the Real Estate type of collateral</description>
        <label>Wholesaler AR Collateral Detail - Real Estate</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_KOR_WS_AR_Collateral_Detail_Security</fullName>
        <active>true</active>
        <description>This Accounts Receivable record type represents the Security type of collateral</description>
        <label>Wholesaler AR Collateral Detail - Security</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>